--- a/todo
+++ b/todo
@@ -1,2 +1,3 @@
-TODO: verificar la tabla de incidencias de viajes y ver donde se requisita
-TODO: crear claves para un viaje que cambio de destino y setearlas controladores > operacion > modificar_destino_do
+TODO: costos por tiempo calcularlos con base en tipo de tarifa y calcularlos cada 30 min Y/o 30 km crear flujo y validarlo
+TODO: crear flujo de pagos de viajes y emision de papeletas crear historial de pagos
+TODO: mostrar viajes por cobrar y viajes pagados
