ingresos y egresos pagos de operadores

--- a/todo
+++ b/todo
@@ -3,3 +3,4 @@ TODO: crear flujo de pagos de viajes y emision de papeletas crear historial de p
 TODO: mostrar viajes por cobrar y viajes pagados
 TODO: crear trabajo cron para generacion de cuotas
 TODO: recualcular el costo adicional cuando se modifique, afecta el statics asi como las finanzas del operador, eliminar la modificacion cuando este procesado el viaje
+TODO: cuando una tabla no muestra elementos deshabilitar la accion de la fila
