--- a/todo
+++ b/todo
@@ -1,15 +1,10 @@
 TODO: costos por tiempo calcularlos con base en tipo de tarifa y calcularlos cada 30 min Y/o 30 km crear flujo y validarlo
-TODO: crear flujo de pagos de viajes y emision de papeletas crear historial de pagos
-TODO: mostrar viajes por cobrar y viajes pagados
 TODO: crear trabajo cron para generacion de cuotas
-TODO: recualcular el costo adicional cuando se modifique, afecta el statics asi como las finanzas del operador, eliminar la modificacion cuando este procesado el viaje
 TODO: cuando una tabla no muestra elementos deshabilitar la accion de la fila
 TODO: websockets sobre tablas especificas para evitar edicion al finalizar procesos
-TODO: el pdf que se envio a los operadores tiene que estar disponible para su revision al pagar
 TODO: vistas con papeletas de los operadores
 TODO: transicion en C9 y en procesar rollback
 TODO: evitar procesar cuando hay pagos pendientes
 TODO: los viajes procesados deberian tener un visor de adicionales
-TODO: La lista de viajes deberia tener el numero de viaje
-TODO: Los viajes por operador deberian tener el id de viaje
-TODO: incluir cortesias y verificar su logica
+TODO: los viajes archivados deberian tener un visor de adicionales
+TODO: incluir vista para setear variables del sistema
