--- a/todo
+++ b/todo
@@ -4,8 +4,16 @@ cuando una tabla no muestra elementos deshabilitar la accion de la fila
 if(api.rows().count() > '0'){accion_de_fila('tabla');}
 
 
-TODO: websockets sobre tablas especificas para evitar edicion al finalizar procesos
 TODO: vistas con papeletas de los operadores
 TODO: transicion en C9 y en procesar rollback
 TODO: evitar procesar cuando hay pagos pendientes
-TODO: incluir vista para setear variables del sistema
+
+
+TODO: incluir en papeleta el porcentaje de deduccion
+TODO: lo que paga el chofer se reembolsa
+TODO: el costo adicional de servicios como km_adicionales, o tiempo tiene un porcentaje que es el mismo de la comision
+TODO: la papeleta debe reflejar costos netos con deduccion incluida de comision
+TODO: nueva clave para los cancelados que generen costo por que se incluyen en papeleta
+TODO: al poner o quitar cobros a operadores egresos operador 184 error
+TODO: comisiones individuakles
+TODO: papeleta 59 foreach error al procesar
